# harmonia

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  LICENSE  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  package-lock.json  package.json  setup.sh  start-harmonia.sh
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  audio_processor.py  main.py  routes.py
backend/app/api/: routes.py
backend/app/audio/: processor.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/routers/: preset.py  process.py  upload.py
backend/app/services/: audio.py
client/: package-lock.json  package.json
client/src/: App.css  App.tsx  types.ts
client/src/components/: AudioControls.tsx  AudioUpload.tsx  IntentionQuestionnaire.tsx  KnowledgeBase.tsx
client/src/services/: api.ts
docs/: API.md  DEPLOYMENT.md  FREQUENCIES.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.jsx  App.tsx  index.css  main.tsx
frontend/src/components/: ControlPanel.jsx  HomePage.jsx  IntentionQuestionnaire.jsx  KnowledgeBase.jsx  (+1 more)
harmonia-audio-processor/: analyze_audio.py  requirements.txt  transform_audio.py
harmonia-backend/: package-lock.json  package.json  server.js  test-server.js
harmonia-frontend/: package-lock.json  package.json
harmonia-frontend/src/: App.css  App.js  index.css
server/: audio_processor.py  index.js  package-lock.json  package.json  requirements.txt
(+15 files in other folders)
