[tool.poetry]
name = "harmonia-backend"
version = "0.1.0"
description = "Harmonia audio processing API"
authors = ["Harmonia Team <dev@harmonia.local>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras=["standard"], version="^0.30.6"}
pydantic = "^2.9.0"
pydub = "^0.25.1"
librosa = "^0.10.2.post1"
numba = "^0.60.0"
llvmlite = "^0.43.0"
scipy = "^1.13.1"
soundfile = "^0.12.1"
audioread = "^3.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
